codepkg/objects/UnuverDepartment__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_employees__c</fullName>
        <label>Count of employees</label>
        <summaryForeignKey>UnuverEmployee__c.UniverDepartment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_students__c</fullName>
        <label>Count of students</label>
        <summaryForeignKey>Student__c.UniverDepartment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Head_of_department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of department</label>
        <referenceTo>UnuverEmployee__c</referenceTo>
        <relationshipLabel>UniverDepartments</relationshipLabel>
        <relationshipName>UniverDepartments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>UniverDepartments</relationshipLabel>
        <relationshipName>UniverDepartments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UniverDepartment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UnuverEmployee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UniverDepartments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>